--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,12 +1,12 @@
 :root {
-  --background: #ffffff;
+  --background: #171717;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #ffffff;
   }
 }
 
