--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -163,6 +163,7 @@ a.secondary {
 
 @media (prefers-color-scheme: dark) {
   .logo {
-    filter: invert();
+    /*filter: invert();*/
+    filter: none;
   }
 }
